--- a/app/styles/_flags/blr.scss
+++ b/app/styles/_flags/blr.scss
@@ -1,5 +1,6 @@
 // Belarus
 // http://www.crwflags.com/fotw/flags/by.html
+// http://www.vexilla-mundi.com/belarus_flag.html
 @mixin flag-blr() {
   @include ratio(1 / 2);
   $unit: $h315;
