--- a/app/styles/_flags/chn.scss
+++ b/app/styles/_flags/chn.scss
@@ -3,8 +3,8 @@
 @mixin flag-chn() {
   @include ratio(2 / 3);
   $unit: $h20;
-  $bg: #de2910;
-  $star: #FDDA24;
+  $red: #de2910;
+  $yellow: #FDDA24;
   $star-size: 6 * $unit;
   $star-offset-top: 5 * $unit;
   $star-offset-left: 5 * $unit;
@@ -12,14 +12,14 @@
   $star-offset-top-small: 2 * $unit;
   $star-offset-left-small: 10 * $unit;
 
-  background-color: $bg;
+  background-color: $red;
   &:before {
-    @include star($star, $star-size, $star-offset-left, $star-offset-top);
+    @include star($yellow, $star-size, $star-offset-left, $star-offset-top);
   }
   &:after {
-    @include star($star, $star-size-small, $star-offset-left-small, $star-offset-top-small);
-    text-shadow:(2 * $unit) (2 * $unit) 0px $star,
-                (2 * $unit) (5 * $unit) 0px $star,
-                (0) (7 * $unit) 0px $star;
+    @include star($yellow, $star-size-small, $star-offset-left-small, $star-offset-top-small);
+    text-shadow:(2 * $unit) (2 * $unit) 0px $yellow,
+                (2 * $unit) (5 * $unit) 0px $yellow,
+                (0) (7 * $unit) 0px $yellow;
   }
 };
