--- a/app/styles/_flags/lbn.scss
+++ b/app/styles/_flags/lbn.scss
@@ -10,9 +10,7 @@
 
   $symbol-size: 2 * $unit;
 
-  @include lines($red, 25%,
-                 $white, 50%,
-                 $red, 25%);
+  @include lines($red, 25%, $white, 50%, $red, 25%);
   &:before {
     @include centered-symbol($UTF8_COUNTRY_LBN, $green, $symbol-size);
   }
