--- a/app/styles/_flags/mli.scss
+++ b/app/styles/_flags/mli.scss
@@ -3,9 +3,9 @@
 // https://en.wikipedia.org/wiki/Flag_of_Mali
 @mixin flag-mli() {
   @include ratio(2 / 3);
-  $left: #14B53A;
-  $center: #FCD116;
-  $right: #CE1126;
+  $green: #14B53A;
+  $yellow: #FCD116;
+  $red: #CE1126;
 
-  @include three-columns($left, $center, $right);
+  @include three-columns($green, $yellow, $red);
 };
