--- a/app/styles/_flags/prk.scss
+++ b/app/styles/_flags/prk.scss
@@ -4,36 +4,28 @@
 @mixin flag-prk() {
   @include ratio(1 / 2);
   $unit: $h144;
-  $blue-color: #024FA2;
+  $blue: #024FA2;
+  $white: #FFF;
+  $red: #ED1C27;
   $blue-height: 24 * $unit;
-  $white-color: #FFF;
   $white-height: 4 * $unit;
-  $red-color: #ED1C27;
   $red-height: 88 * $unit;
-  $circle-color: $white-color;
   $circle-size: 64 * $unit;
-  $offset-left-circle: 96 * $unit;
+  $offset-left-circle: 94 * $unit;
   $offset-top-circle: 72 * $unit;
-  // Note: As we're playing with really small fractions of a flag here ($h144!)
-  // I had to adjust the position of the star slightly to compensate for the
-  // rounding errors
-  $star-color: $red-color;
-  $star-size: 58 * $unit;
+  $star-size: 62 * $unit;
   $offset-left-star: 94 * $unit;
   $offset-top-star: 70 * $unit;
 
-  background-image: circle($circle-color, $circle-size, $offset-left-circle, $offset-top-circle),
-                    lines($blue-color,
-                          $blue-height,
-                          $white-color,
-                          $white-height,
-                          $red-color,
-                          $red-height,
-                          $white-color,
-                          $white-height,
-                          $blue-color,
-                          $blue-height);
+  background-image: lines($blue, $blue-height,
+                          $white, $white-height,
+                          $red, $red-height,
+                          $white, $white-height,
+                          $blue, $blue-height);
   &:before {
-    @include star($star-color, $star-size, $offset-left-star, $offset-top-star);
+    @include circle-pseudo($white, $circle-size, $offset-left-circle, $offset-top-circle);
+  }
+  &:after {
+    @include star($red, $star-size, $offset-left-star, $offset-top-star);
   }
 };
