--- a/app/styles/_flags/tha.scss
+++ b/app/styles/_flags/tha.scss
@@ -1,24 +1,19 @@
 // Thailand
 // http://www.crwflags.com/fotw/flags/th.html
-//
+// http://www.vexilla-mundi.com/thailand_flag.html
 // Note: This is the same as Costa Rica, but with red and blue reversed
 @mixin flag-tha() {
   @include ratio(2 / 3);
-  $red-color: #ED1C24;
-  $red-height: $h6;
-  $white-color: #FFF;
-  $white-height: $h6;
-  $blue-color: #241D4F;
-  $blue-height: $h3;
+  $blue: #012169;
+  $white: #FFF;
+  $red: #c8102e;
+  $stripe-height: percentage(1/6);
 
-  @include lines($red-color,
-                 $red-height,
-                 $white-color,
-                 $white-height,
-                 $blue-color,
-                 $blue-height,
-                 $white-color,
-                 $white-height,
-                 $red-color,
-                 $red-height);
+  @include lines(
+    $red, $stripe-height,
+    $white, $stripe-height,
+    $blue, 2 * $stripe-height,
+    $white, $stripe-height,
+    $red, $stripe-height
+  );
 };
