--- a/app/styles/_flags/aze.scss
+++ b/app/styles/_flags/aze.scss
@@ -4,27 +4,24 @@
 @mixin flag-aze() {
   @include ratio(1 / 2);
   $unit: $h120;
-  $top: #00B5E2;
-  $center: #EF3340;
-  $bottom: #509E2F;
-  $crescent-color: #FFF;
-  $circle-front-color: $center;
+  $blue: #00B5E2;
+  $red: #EF3340;
+  $green: #509E2F;
+  $white: #FFF;
   $circle-front-size: 30 * $unit;
-  $circle-back-color: $crescent-color;
   $circle-back-size: 36 * $unit;
   $circle-back-left: 114 * $unit;
   $circle-back-top: $h2;
   $star-symbol: $UTF8_HEAVY_EIGHT_POINTED_RECTILINEAR_BLACK_STAR;
-  $star-color: $crescent-color;
   $star-size: 30 * $unit;
   $star-left: 134 * $unit;
   $star-top: $h2;
 
   background-image: 
-                    centered-circle($circle-front-color, $circle-front-size),
-                    circle($circle-back-color, $circle-back-size, $circle-back-left, $circle-back-top),
-                    three-lines($top, $center, $bottom);
+                    centered-circle($red, $circle-front-size),
+                    circle($white, $circle-back-size, $circle-back-left, $circle-back-top),
+                    three-lines($blue, $red, $green);
   &:before {
-    @include symbol($star-symbol, $star-color, $star-size, $star-left, $star-top);
+    @include symbol($star-symbol, $white, $star-size, $star-left, $star-top);
   }
 };
