--- a/app/styles/_flags/bel.scss
+++ b/app/styles/_flags/bel.scss
@@ -3,9 +3,9 @@
 // https://en.wikipedia.org/wiki/Flag_of_Belgium
 @mixin flag-bel() {
   @include ratio(13 / 15);
-  $left: #000;
-  $center: #FFE936;
-  $right: #FF0F21;
+  $black: #000;
+  $yellow: #FFE936;
+  $red: #FF0F21;
 
-  @include three-columns($left, $center, $right);
+  @include three-columns($black, $yellow, $red);
 };
