--- a/app/styles/_flags/bfa.scss
+++ b/app/styles/_flags/bfa.scss
@@ -3,13 +3,13 @@
 @mixin flag-bfa() {
   @include ratio(2 / 3);
   $unit: $h12;
-  $top: #EF3340;
-  $bottom: #009639;
-  $star: #FFCD00;
+  $red: #EF3340;
+  $green: #009639;
+  $yellow: #FFCD00;
   $star-size: 4 * $h12;
 
-  @include two-lines($top, $bottom);
+  @include two-lines($red, $green);
   &:before {
-    @include centered-star($star, $star-size);
+    @include centered-star($yellow, $star-size);
   }
 };
