--- a/app/styles/_flags/cmr.scss
+++ b/app/styles/_flags/cmr.scss
@@ -4,13 +4,12 @@
 // Note: There is no official information on the size of the star
 @mixin flag-cmr() {
   @include ratio(2 / 3);
-  $left: #007A5E;
-  $center: #CE1126;
-  $right: #FCD116;
-  $star: $right;
+  $green: #007A5E;
+  $red: #CE1126;
+  $yellow: #FCD116;
 
-  @include three-columns($left, $center, $right);
+  @include three-columns($green, $red, $yellow);
   &:before {
-    @include centered-star($star);
+    @include centered-star($yellow);
   }
 };
