--- a/app/styles/_flags/dza.scss
+++ b/app/styles/_flags/dza.scss
@@ -4,47 +4,38 @@
 @mixin flag-dza() {
   @include ratio(2 / 3);
   $unit: $h120;
-  $left: #006233;
-  $right: #FFF;
-  $crescent-back-color: #d21034;
+  $green: #006233;
+  $white: #FFF;
+  $red: #d21034;
   $crescent-back-size: 60 * $unit;
 
   $crescent-front-size: 48 * $unit;
-  $crescent-front-left-color: $left;
   $crescent-front-left-size: 17 * $unit;
-  $crescent-front-right-color: $right;
   // We slightly make it bigger than on the construction sheet to really create
   // a crescent effect
   $crescent-front-right-size: 33 * $unit; 
   $crescent-front-top: 60 * $unit;
   $crescent-front-left: 97 * $unit;
 
-  $star-color: $crescent-back-color;
   $star-size: 30 * $unit;
   $star-left: 103 * $unit;
   $star-top: 60 * $unit;
 
   background-image: 
-                    centered-circle($crescent-back-color, $crescent-back-size),
-                    two-columns($left, $right);
+                    centered-circle($red, $crescent-back-size),
+                    two-columns($green, $white);
   
   // We're doing a bicolor circle using rounded borders, and putting it on top
   // of the red circle in background
   &:before {
-    content: "";
-    height: $crescent-front-size;
-    width:0;
+    @include circle-pseudo(transparent, $crescent-front-size, $crescent-front-left, $crescent-front-top);
     border-top: none;
     border-bottom: none;
-    border-left: $crescent-front-left-size solid $crescent-front-left-color;
-    border-right: $crescent-front-right-size solid $crescent-front-right-color;
-    position:absolute;
-    top: $crescent-front-top - $crescent-front-size / 2;
-    left: $crescent-front-left - $crescent-front-size / 2;
-    border-radius: 50%;
+    border-left: $crescent-front-left-size solid $green;
+    border-right: $crescent-front-right-size solid $white;
   }
   &:after {
-    @include star($star-color, $star-size, $star-left, $star-top);
+    @include star($red, $star-size, $star-left, $star-top);
     transform: rotate(90deg);
   }
 };
