--- a/app/styles/_flags/est.scss
+++ b/app/styles/_flags/est.scss
@@ -3,9 +3,9 @@
 // https://en.wikipedia.org/wiki/Flag_of_Estonia
 @mixin flag-est() {
   @include ratio(7 / 11);
-  $top: #1291FF;
-  $center: #000;
-  $bottom: #FFF;
+  $blue: #1291FF;
+  $black: #000;
+  $white: #FFF;
 
-  @include three-lines($top, $center, $bottom);
+  @include three-lines($blue, $black, $white);
 };
