--- a/app/styles/_flags/fro.scss
+++ b/app/styles/_flags/fro.scss
@@ -1,19 +1,18 @@
 // Faroe Islands
 // http://www.crwflags.com/fotw/flags/fo.html
-
 @mixin flag-fro() {
   @include ratio(34 / 52);
-  $bg: #FFF;
-  $border-color: #0065BD;
-  $inner-color: #ED2939;
+  $white: #FFF;
+  $blue: #0065BD;
+  $red: #ED2939;
   $cross-width: 4 * $w22;
   $inner-width: 2 * $w22;
   $cross-offset: 6 * $w22;
 
   @include nordic-cross-border(
-    $bg,
-    $border-color,
-    $inner-color,
+    $white,
+    $blue,
+    $red,
     $cross-width,
     $inner-width,
     $cross-offset
