--- a/app/styles/_flags/gha.scss
+++ b/app/styles/_flags/gha.scss
@@ -3,13 +3,13 @@
 // https://en.wikipedia.org/wiki/Flag_of_Ghana
 @mixin flag-gha() {
   @include ratio(2 / 3);
-  $top: #CE1126;
-  $center: #FCD116;
-  $bottom: #006B3F;
-  $star: #000;
+  $red: #CE1126;
+  $yellow: #FCD116;
+  $green: #006B3F;
+  $black: #000;
 
-  @include three-lines($top, $center, $bottom);
+  @include three-lines($red, $yellow, $green);
   &:before {
-    @include centered-star($star);
+    @include centered-star($black);
   }
 };
