--- a/app/styles/_flags/hnd.scss
+++ b/app/styles/_flags/hnd.scss
@@ -5,20 +5,18 @@
 @mixin flag-hnd() {
   @include ratio(1 / 2);
   $unit: $h36;
-  $top: #0073CF;
-  $center: #FFF;;
-  $bottom: #0073CF;
-  $star: #0073CF;
+  $blue: #0073CF;
+  $white: #FFF;;
   $star-size: 4 * $unit;
   $top-offset-top: 16 * $unit;
   $top-offset-left: 34 * $unit;
 
-  @include three-lines($top, $center, $bottom);
+  @include three-lines($blue, $white, $blue);
   &:before {
-    @include centered-star($star, $star-size);
-    text-shadow:(12 * $unit) (3 * $unit) 0px $star,
-                (12 * $unit) (-3 * $unit) 0px $star,
-                (-12 * $unit) (3 * $unit) 0px $star,
-                (-12 * $unit) (-3 * $unit) 0px $star;
+    @include centered-star($blue, $star-size);
+    text-shadow:(12 * $unit) (3 * $unit) 0px $blue,
+                (12 * $unit) (-3 * $unit) 0px $blue,
+                (-12 * $unit) (3 * $unit) 0px $blue,
+                (-12 * $unit) (-3 * $unit) 0px $blue;
   }
 };
