--- a/app/styles/_flags/hun.scss
+++ b/app/styles/_flags/hun.scss
@@ -2,13 +2,11 @@
 // http://www.crwflags.com/fotw/flags/hu.html
 // https://en.wikipedia.org/wiki/Flag_of_Hungary
 // https://upload.wikimedia.org/wikipedia/commons/c/c1/Flag_of_Hungary.svg
-//
-// Note: I used colors from the Wikipedia SVG
 @mixin flag-hun() {
   @include ratio(1 / 2);
-  $top: #CD2A3E;
-  $center: #FFF;
-  $bottom: #436F4D;
+  $red: #c8102e;
+  $white: #FFF;
+  $green: #00843e;
 
-  @include three-lines($top, $center, $bottom);
+  @include three-lines($red, $white, $green);
 };
