--- a/app/styles/_flags/lbr.scss
+++ b/app/styles/_flags/lbr.scss
@@ -28,13 +28,7 @@
                           $white, $stripe-height,
                           $red, $stripe-height);
   &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: $blue;
-    width: $square-size;
-    height: $square-size;
+    @include square($blue, $square-size);
   }
   &:after {
     @include star($white, $star-size, $star-left, $star-top);
