--- a/app/styles/_flags/som.scss
+++ b/app/styles/_flags/som.scss
@@ -4,12 +4,12 @@
 @mixin flag-som() {
   @include ratio(2 / 3);
   $unit: $h12;
-  $bg: #4189DD;
-  $star: #FFF;
+  $blue: #4189DD;
+  $white: #FFF;
   $star-size: 4 * $unit;
 
-  background-color: $bg;
+  background-color: $blue;
   &:before {
-    @include centered-star($star, $star-size);
+    @include centered-star($white, $star-size);
   }
 };
